objects/R_SkillAssignment__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Status__c</fullName>
        <formula>text(Candidate__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proficiency__c</fullName>
        <label>Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>No Longer Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill Type</label>
        <referenceTo>Skills_Master__c</referenceTo>
        <relationshipLabel>Skill_Assignment</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Skill Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SK-{0000000}</displayFormat>
        <label>Skill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill_Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>